--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Pinnacle Construction and Consultancy Pvt. Ltd.</title>
-    <meta name="description" content="Trusted partners for construction excellence and strategic consultancy. Shaping urban skylines with precision and expertise." />
+    <meta
+      name="description"
+      content="Trusted partners for construction excellence and strategic consultancy. Shaping urban skylines with precision and expertise."
+    />
     <meta name="author" content="Urban Pinnacle Construction" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta property="og:title" content="Urban Pinnacle Construction and Consultancy Pvt. Ltd." />
-    <meta property="og:description" content="Trusted partners for construction excellence and strategic consultancy" />
+    <meta
+      property="og:title"
+      content="Urban Pinnacle Construction and Consultancy Pvt. Ltd."
+    />
+    <meta
+      property="og:description"
+      content="Trusted partners for construction excellence and strategic consultancy"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
